# nginxparser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_PRD.txt  EXECUTION_SUMMARY.txt  FINAL_100_PERCENT_REPORT.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.txt  FINAL_TEST_COVERAGE_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.txt  PRD.md  PRD_CLAUDE.md  PRD_COMPLETION_SUMMARY.md  PRD_FINAL_REPORT.md  PRD_FINAL_TEST_COVERAGE_REPORT.md  PRD_IMPLEMENTATION_SUMMARY.md  PRD_PRD.md  PRD_README.md  PRD_SECURITY_HEADERS_IMPLEMENTATION.md  PRD_TASK_001_IMPLEMENTATION_REPORT.md  PRD_TASK_001_IMPLEMENTATION_SUMMARY.md  PRD_TASK_001_QUICK_REFERENCE.md  PRD_TASK_001_SUMMARY.md  QUICK_REFERENCE.txt  README.md  SECURITY_HEADERS_IMPLEMENTATION.md  STATUS.txt  TASKMASTER_COMPLETE_REPORT.txt  TASK_001_IMPLEMENTATION_REPORT.md  TASK_001_IMPLEMENTATION_SUMMARY.md  TASK_001_QUICK_REFERENCE.md  TASK_001_SUMMARY.md  TASK_002_SUMMARY.md  comprehensive_demo.py  comprehensive_task_report.py  comprehensive_test_summary.py  coverage_report.json  (+38 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: comprehensive_cicd_testing_prd.txt
.taskmaster/tasks/: tasks.json
